# MAESTRO-v2

./: .gitignore  README.md  lab_config.json  my_tree.txt
backend/: lab_config.json  main.py  pyproject.toml
backend/app/adapters/: __init__.py  electrode_coater.py  potentiostat.py  surrogate.py
backend/app/agents/: __init__.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: artifacts.py  config.py  database.py  documents.py  extraction.py  lab.py  lab_config.py  llm.py  models.py  orchestrator.py  skills.py  surrogate.py  tool_registry.py  tools.py
backend/app/optimisers/: __init__.py  base.py  catalogue.py  deap_bo.py  gp_bo.py  honegumi_bo.py  llm_bo.py  optuna_bo.py  random_search.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  declarations.d.ts  index.css  main.tsx
frontend/src/components/agent/: AgentChat.tsx
frontend/src/components/digital-twin/: EquipmentNode.tsx  LabCanvas.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/components/shared/: ExecutionLog.tsx  LiveEventFeed.tsx  MetricCard.tsx  PlotViewer.tsx  ResourceSchedule.tsx  VirtualClock.tsx  Visualisation.tsx
frontend/src/components/workflow/: LiveWorkflowCanvas.tsx
frontend/src/hooks/: usePolling.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Campaign.tsx  Dashboard.tsx  LabBuilder.tsx  LabNotebook.tsx  LabSetup.tsx  Reproducibility.tsx
frontend/src/store/: maestroStore.ts
frontend/src/types/: index.ts
